--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ h2{
     color: rgb(255, 255, 255);
 }
 h3{
-    font-size: 20px;
+    font-size: 17px;
     line-height: normal;
     color: rgb(255, 255, 255);
 }
@@ -165,4 +165,68 @@ span{
     padding: 10px;
     left: 80%;
     top: 35%;
+}
+
+/* Change Habit style-anirban3365 */
+.change-description{
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+}
+.change-cart{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 5%;
+    margin: 50px 0px;
+  
+}
+.cart-box1 ,.cart-box2,.cart-box3,.cart-box4{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+.cart-box1 h3 ,.cart-box2 h3,.cart-box3 h3,.cart-box4 h3{
+    margin-bottom: 7px;
+}
+.cart-box1 img,.cart-box2 img,.cart-box3 img,.cart-box4 img{
+    border-radius: 50%;
+    margin-bottom: 20px;
+}
+
+.run-extra{
+    display: flex;
+    background-color: rgb(34, 34, 34);
+    justify-content: space-between;
+    padding: 5%;
+    margin-top: 100px;
+    margin-bottom: 50px;
+}
+.run-picture{
+    width: 35%;
+    height: 20%;
+
+}
+.run-description{
+    width: 35%;
+}
+.run-picture img{
+    width: 100%;
+    border-radius: 20px;  
+    height: 300px;
+
+}
+.run-description h1{
+    font-size: 50px;
+    font-weight: 800;
+    margin-bottom: 10px;
+}
+.run-description P{
+    margin-bottom: 15px;
+}
+#join{
+    padding: 15px 80px;
+    margin-top: 10%;
 }
