--- a/styles/style.css
+++ b/styles/style.css
@@ -203,6 +203,7 @@ span{
     padding: 5%;
     margin-top: 100px;
     margin-bottom: 50px;
+    border-radius: 18px;
 }
 .run-picture{
     width: 35%;
@@ -215,7 +216,7 @@ span{
 .run-picture img{
     width: 100%;
     border-radius: 20px;  
-    height: 300px;
+    height: 300px;clear
 
 }
 .run-description h1{
@@ -229,4 +230,65 @@ span{
 #join{
     padding: 15px 80px;
     margin-top: 10%;
+}
+
+/* team Section style-@anirban3365 */
+.meet-team{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 3% 2%;
+    position: relative;
+  
+   
+}
+.team-person{
+    width: 100%;
+    object-fit: cover;
+
+
+}
+.team-person img{
+    width: 100%;
+    object-fit: cover;
+    object-position: center;
+    height: 20rem;
+    border-radius: 15px;
+}
+.t1-name {
+    position: absolute;
+    left: 2%;
+    top:38%;
+}
+.t2-name{
+    position: absolute;
+    left: 36%;
+    top:38%;
+}
+.t3-name{
+    position: absolute;
+    left: 70%;
+    top:38%;
+}
+.t4-name{
+    position: absolute;
+    left: 2%;
+    top: 93%;
+}
+.t5-name{
+    position: absolute;
+    left: 36%;
+    top: 93%;
+}
+.t6-name{
+    position: absolute;
+    left: 70%;
+    top: 93%;
+}
+.des{
+    width: 50%;
+    margin: 78px auto;
+    text-align: center;
+}
+.des h1{
+    margin-bottom: 20px;
 }
