Width-Update-for-small-device

--- a/styles/style.css
+++ b/styles/style.css
@@ -466,6 +466,9 @@ select {
     .nav-list{
         display: none;
     }
+    section{
+        width: 90%;
+    }
     .menu{
         display: flex;
       
